# emergency_services_logistics

./: README.md
classical_planning/: run.sh
classical_planning/pddl/: domain.pddl  problem1.pddl  problem2.pddl  problem3.pddl
classical_planning/src/: MyAlgorithm.java  MyHeuristic.java  Node.java
temporal_planning/: CMakeLists.txt  myplan.txt  package.xml  run_task_3_2.sh
temporal_planning/launch/: commands  temporal_planning_launch.py
temporal_planning/pddl/: domain_durative_actions.pddl  problem1_durative_actions.pddl
temporal_planning/src/: fill_box_and_load_it_on_carrier_action_node.cpp  move_agent_action_node.cpp  move_agent_and_carrier_action_node.cpp  unload_box_deliver_its_content_and_reload_it_on_carrier_action_node.cpp  unload_empty_box_from_carrier_action_node.cpp
